force-app/main/default/objects/Referencia_Comercial__c/Referencia_Comercial__c.object-meta.xml
<CustomObject>
    <label>Referencia Comercial</label>
    <nameField>
        <label>Referencia Comercial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referencias Comerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>