force-app/main/default/objects/Referencia_Comercial__c/fields/Clic_comercial__c.field-meta.xml
<CustomField>
    <fullName>Clic_comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente comercial</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referencias Comerciales</relationshipLabel>
    <relationshipName>Referencias_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>