force-app/main/default/objects/Referencia_Comercial__c/fields/Codigo_Oportunidad_Principal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Oportunidad_Principal__c</fullName>
    <formula>Oportunidad_principal__r.Codigo_OC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Oportunidad Principal</label>
    <type>Text</type>
</CustomField>