force-app/main/default/objects/Referencia_Comercial__c/fields/Entornos_tecnologicos__c.field-meta.xml
<CustomField>
    <fullName>Entornos_tecnologicos__c</fullName>
    <label>Entornos tecnológicos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>