force-app/main/default/objects/Referencia_Comercial__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha última oportunidad</label>
    <type>Date</type>
</CustomField>