force-app/main/default/objects/Referencia_Comercial__c/fields/Fecha_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Creacion__c</fullName>
    <label>Fecha Creación</label>
    <type>Date</type>
</CustomField>