force-app/main/default/objects/Referencia_Comercial__c/fields/Ficha__c.field-meta.xml
<CustomField>
    <fullName>Ficha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ficha</label>
    <type>Checkbox</type>
</CustomField>