force-app/main/default/objects/Referencia_Comercial__c/fields/GUIDReferencia__c.field-meta.xml
<CustomField>
    <fullName>GUIDReferencia__c</fullName>
    <label>GUIDReferencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>