force-app/main/default/objects/Referencia_Comercial__c/fields/Importe_acumulado__c.field-meta.xml
<CustomField>
    <fullName>Importe_acumulado__c</fullName>
    <label>Importe acumulado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>