force-app/main/default/objects/Referencia_Comercial__c/fields/Nombre_completo_propietario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_completo_propietario__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo propietario</label>
    <type>Text</type>
</CustomField>