force-app/main/default/objects/Referencia_Comercial__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>