force-app/main/default/objects/Referencia_Comercial__c/fields/Oportunidad_principal__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Principal</label>
    <referenceTo>Oportunidad__c</referenceTo>
    <relationshipLabel>Referencias Comerciales</relationshipLabel>
    <relationshipName>Referencias_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>