force-app/main/default/objects/Referencia_Comercial__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Principal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referencias Comerciales</relationshipLabel>
    <relationshipName>Referencias_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>