force-app/main/default/objects/Referencia_Comercial__c/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BFSI</fullName>
            </value>
            <value>
                <fullName>CONSUMER</fullName>
            </value>
            <value>
                <fullName>DIGITAL ADMIN</fullName>
            </value>
            <value>
                <fullName>ENERGY &amp; UTILITIES</fullName>
            </value>
            <value>
                <fullName>GRUPO IBERMATICA</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>ILA ARGENTINA</fullName>
            </value>
            <value>
                <fullName>INTERFLEX</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>MICROSOFT</fullName>
            </value>
            <value>
                <fullName>ONCE GROUP</fullName>
            </value>
            <value>
                <fullName>SCADA ARGENTINA</fullName>
            </value>
            <value>
                <fullName>SCADA CHILE</fullName>
            </value>
            <value>
                <fullName>SCADA PERU</fullName>
            </value>
            <value>
                <fullName>SMART FACTORIES</fullName>
            </value>
            <value>
                <fullName>TMT</fullName>
            </value>
            <value>
                <fullName>Nueva Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>