force-app/main/default/objects/Referencia_Comercial__c/fields/Organizacion_principal__c.field-meta.xml
<CustomField>
    <fullName>Organizacion_principal__c</fullName>
    <formula>TEXT(Oportunidad_principal__r.Mercado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organización principal</label>
    <type>Text</type>
</CustomField>