force-app/main/default/objects/Referencia_Comercial__c/fields/Razon_Social_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social_Cliente__c</fullName>
    <formula>Clic_comercial__r.Razon_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razón Social Cliente</label>
    <type>Text</type>
</CustomField>