force-app/main/default/objects/Referencia_Comercial__c/fields/Sector_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Sector_Cliente__c</fullName>
    <formula>Clic_comercial__r.Sector_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector Cliente</label>
    <type>Text</type>
</CustomField>