force-app/main/default/objects/Referencia_Comercial__c/fields/Subsector_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Subsector_Cliente__c</fullName>
    <formula>Clic_comercial__r.Subsector_texto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsector Cliente</label>
    <type>Text</type>
</CustomField>