force-app/main/default/objects/Referencia_Comercial__c/listViews/Referencias_Comerciales.listView-meta.xml
<ListView>
    <fullName>Referencias_Comerciales</fullName>
    <columns>NAME</columns>
    <columns>Ficha__c</columns>
    <filterScope>Mine</filterScope>
    <label>Referencias Comerciales</label>
</ListView>