force-app/main/default/objects/Referencia_Comercial__c/listViews/Todas1.listView-meta.xml
<ListView>
    <fullName>Todas1</fullName>
    <columns>Nombre_largo__c</columns>
    <columns>NAME</columns>
    <columns>Clic_comercial__c</columns>
    <columns>Razon_Social_Cliente__c</columns>
    <columns>Codigo_Oportunidad_Principal__c</columns>
    <columns>Fecha__c</columns>
    <columns>Importe_acumulado__c</columns>
    <columns>Observaciones__c</columns>
    <columns>Ficha__c</columns>
    <columns>Sector_Cliente__c</columns>
    <columns>Subsector_Cliente__c</columns>
    <columns>Area_conocimiento_tecno__c</columns>
    <columns>Buscador_Area_Conocimiento_Tecnologica__c</columns>
    <columns>Organizacion_principal__c</columns>
    <columns>Nombre_completo_propietario__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>